# proc-comm-zoo-svc

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeListsZoo.txt  Dockerfile  README.md
3ty/proc-comm-lib-ows/: CMakeLists.txt  CMakeLists.txt.in
3ty/zoo/: version.h
assets/getstatus/: GetStatus.zcfg  Makefile  service.c
assets/zoo/: main.cfg
includes/web/: httpfuntions.hpp
includes/zoo/: zooconverter.hpp
notes/: config.zcfg  filter.txt  note_1.txt  ows.xml
scripts/: build.sh  entrypoint.sh
src/: sha1.cpp  test.cpp  xmlmemorywritewrapper.cpp  zooconverter.cpp
src/zoo/: deploy.cpp  eoepcaadesdeployprocess.zcfg  eoepcaadesundeployprocess.zcfg
test/: CMakeLists.txt
test/application/: sha1.cpp  test01.cpp
travis/: acceptanceTest.sh  build.sh  containerCreation.sh  release.sh
travis/libs/: variables.sh
